metadata/force-app/main/default/objects/CustomName_qeNkJ__c/CustomName_qeNkJ__c.object-meta.xml
<CustomObject>
    <description>Description_GxEtY</description>
    <label>CustomLabel_lGKui</label>
    <nameField>
        <label>CustomLabel_lGKui</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_lGKuis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>