metadata/force-app/main/default/objects/CustomName_qeNkJ__c/fields/CustomField_DrlDO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DrlDO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielductes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>