metadata/force-app/main/default/objects/CustomName_qeNkJ__c/fields/CustomField_ExhTI__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ExhTI__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpWTDr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>