metadata/force-app/main/default/objects/CustomName_qeNkJ__c/fields/CustomField_vqdcS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vqdcS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzpAGC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>